# star-alchemy

./: .gitignore  LICENSE  README.md  pyproject.toml  qa  setup.cfg
examples/sales/: __init__.py  _schema.py  cube.py  queries.py  schema.py  tables.py
galaxy_schema/: __init__.py  _galaxy_schema.py
star_alchemy/: __init__.py  _star_alchemy.py  _star_schema.py
star_alchemy/contrib/: networkx.py
tests/: tables.py  test_contrib_networkx.py  test_examples.py  test_galaxy_schema.py  test_mypy.py  test_pycodestyle.py  test_readme.py  test_star_alchemy.py  test_star_schema.py  util.py
tools/: fix  publish  qa  release
