[tool.poetry]
name = "star-alchemy"
version = "0.1.0"
description = ""
authors = ["Daniel Bradburn <moagstar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1"
attrs = "^20.2.0"
pycodestyle = "^2.6.0"

[tool.poetry.dev-dependencies]
sqlparse = "^0.3.1"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"
pycodestyle = "^2.6.0"
mistletoe = "^0.7.2"
beautifulsoup4 = "^4.9.3"
networkx = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
