[tool.poetry]
name = "star-alchemy"
version = "0.3.0"
description = ""
authors = ["Daniel Bradburn <moagstar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2"
toolz = "^0.12.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
sqlparse = "^0.3.1"
mypy = "^0.991"
sqlalchemy-stubs = "^0.3"
pycodestyle = "^2.6.0"
mistletoe = "^0.7.2"
beautifulsoup4 = "^4.9.3"
networkx = "^2.5"
html5lib = "^1.1"
black = "^22.10.0"
sqlvalidator = "^0.0.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
